# CoCo-Bot

./: .env.dev  README.md  bot.py  pyproject.toml
config/: genshincos.json
src/plugins/coco_menu/: __init__.py
src/plugins/nonebot_plugin_genshincos/: __init__.py  utils.py
src/plugins/nonebot_plugin_guess/: config.py  game.py  user.py
src/plugins/nonebot_plugin_whateat_pic/: __init__.py  check_pass.py  config.py
src/plugins/nonebot_plugin_yiyandingzhen/: __init__.py
src/plugins/so_many_api/: __init__.py  base_import.py  beauty.py  cos.py  meizi.py  news.py
